committing xalan-j xslt 3.0 implementation improvements. solving few code deprecation issues as well.