@@ -742,7 +742,7 @@ public class EnvironmentCheck
     // If we found a matching size and it's for our 
     //  jar, then return it's description
     // Lookup in static jarVersions Hashtable
-    String foundSize = (String) jarVersions.get(new Long(jarSize));
+    String foundSize = (String) jarVersions.get(Long.valueOf(jarSize));
 
     if ((null != foundSize) && (foundSize.startsWith(jarName)))
     {
@@ -1192,94 +1192,94 @@ public class EnvironmentCheck
   static 
   {
     // Note: hackish Hashtable, this could use improvement
-    jarVersions.put(new Long(857192), "xalan.jar from xalan-j_1_1");
-    jarVersions.put(new Long(440237), "xalan.jar from xalan-j_1_2");
-    jarVersions.put(new Long(436094), "xalan.jar from xalan-j_1_2_1");
-    jarVersions.put(new Long(426249), "xalan.jar from xalan-j_1_2_2");
-    jarVersions.put(new Long(702536), "xalan.jar from xalan-j_2_0_0");
-    jarVersions.put(new Long(720930), "xalan.jar from xalan-j_2_0_1");
-    jarVersions.put(new Long(732330), "xalan.jar from xalan-j_2_1_0");
-    jarVersions.put(new Long(872241), "xalan.jar from xalan-j_2_2_D10");
-    jarVersions.put(new Long(882739), "xalan.jar from xalan-j_2_2_D11");
-    jarVersions.put(new Long(923866), "xalan.jar from xalan-j_2_2_0");
-    jarVersions.put(new Long(905872), "xalan.jar from xalan-j_2_3_D1");
-    jarVersions.put(new Long(906122), "xalan.jar from xalan-j_2_3_0");
-    jarVersions.put(new Long(906248), "xalan.jar from xalan-j_2_3_1");
-    jarVersions.put(new Long(983377), "xalan.jar from xalan-j_2_4_D1");    
-    jarVersions.put(new Long(997276), "xalan.jar from xalan-j_2_4_0");
-    jarVersions.put(new Long(1031036), "xalan.jar from xalan-j_2_4_1");    
+    jarVersions.put(Long.valueOf(857192), "xalan.jar from xalan-j_1_1");
+    jarVersions.put(Long.valueOf(440237), "xalan.jar from xalan-j_1_2");
+    jarVersions.put(Long.valueOf(436094), "xalan.jar from xalan-j_1_2_1");
+    jarVersions.put(Long.valueOf(426249), "xalan.jar from xalan-j_1_2_2");
+    jarVersions.put(Long.valueOf(702536), "xalan.jar from xalan-j_2_0_0");
+    jarVersions.put(Long.valueOf(720930), "xalan.jar from xalan-j_2_0_1");
+    jarVersions.put(Long.valueOf(732330), "xalan.jar from xalan-j_2_1_0");
+    jarVersions.put(Long.valueOf(872241), "xalan.jar from xalan-j_2_2_D10");
+    jarVersions.put(Long.valueOf(882739), "xalan.jar from xalan-j_2_2_D11");
+    jarVersions.put(Long.valueOf(923866), "xalan.jar from xalan-j_2_2_0");
+    jarVersions.put(Long.valueOf(905872), "xalan.jar from xalan-j_2_3_D1");
+    jarVersions.put(Long.valueOf(906122), "xalan.jar from xalan-j_2_3_0");
+    jarVersions.put(Long.valueOf(906248), "xalan.jar from xalan-j_2_3_1");
+    jarVersions.put(Long.valueOf(983377), "xalan.jar from xalan-j_2_4_D1");    
+    jarVersions.put(Long.valueOf(997276), "xalan.jar from xalan-j_2_4_0");
+    jarVersions.put(Long.valueOf(1031036), "xalan.jar from xalan-j_2_4_1");    
     // Stop recording xalan.jar sizes as of Xalan Java 2.5.0    
 
-    jarVersions.put(new Long(596540), "xsltc.jar from xalan-j_2_2_0");
-    jarVersions.put(new Long(590247), "xsltc.jar from xalan-j_2_3_D1");
-    jarVersions.put(new Long(589914), "xsltc.jar from xalan-j_2_3_0");
-    jarVersions.put(new Long(589915), "xsltc.jar from xalan-j_2_3_1");
-    jarVersions.put(new Long(1306667), "xsltc.jar from xalan-j_2_4_D1");     
-    jarVersions.put(new Long(1328227), "xsltc.jar from xalan-j_2_4_0");
-    jarVersions.put(new Long(1344009), "xsltc.jar from xalan-j_2_4_1");
-    jarVersions.put(new Long(1348361), "xsltc.jar from xalan-j_2_5_D1");    
+    jarVersions.put(Long.valueOf(596540), "xsltc.jar from xalan-j_2_2_0");
+    jarVersions.put(Long.valueOf(590247), "xsltc.jar from xalan-j_2_3_D1");
+    jarVersions.put(Long.valueOf(589914), "xsltc.jar from xalan-j_2_3_0");
+    jarVersions.put(Long.valueOf(589915), "xsltc.jar from xalan-j_2_3_1");
+    jarVersions.put(Long.valueOf(1306667), "xsltc.jar from xalan-j_2_4_D1");     
+    jarVersions.put(Long.valueOf(1328227), "xsltc.jar from xalan-j_2_4_0");
+    jarVersions.put(Long.valueOf(1344009), "xsltc.jar from xalan-j_2_4_1");
+    jarVersions.put(Long.valueOf(1348361), "xsltc.jar from xalan-j_2_5_D1");    
     // Stop recording xsltc.jar sizes as of Xalan Java 2.5.0
 
-    jarVersions.put(new Long(1268634), "xsltc.jar-bundled from xalan-j_2_3_0");
+    jarVersions.put(Long.valueOf(1268634), "xsltc.jar-bundled from xalan-j_2_3_0");
 
-    jarVersions.put(new Long(100196), "xml-apis.jar from xalan-j_2_2_0 or xalan-j_2_3_D1");
-    jarVersions.put(new Long(108484), "xml-apis.jar from xalan-j_2_3_0, or xalan-j_2_3_1 from xml-commons-1.0.b2");
-    jarVersions.put(new Long(109049), "xml-apis.jar from xalan-j_2_4_0 from xml-commons RIVERCOURT1 branch");
-    jarVersions.put(new Long(113749), "xml-apis.jar from xalan-j_2_4_1 from factoryfinder-build of xml-commons RIVERCOURT1");
-    jarVersions.put(new Long(124704), "xml-apis.jar from tck-jaxp-1_2_0 branch of xml-commons");
-    jarVersions.put(new Long(124724), "xml-apis.jar from tck-jaxp-1_2_0 branch of xml-commons, tag: xml-commons-external_1_2_01");
-    jarVersions.put(new Long(194205), "xml-apis.jar from head branch of xml-commons, tag: xml-commons-external_1_3_02");
+    jarVersions.put(Long.valueOf(100196), "xml-apis.jar from xalan-j_2_2_0 or xalan-j_2_3_D1");
+    jarVersions.put(Long.valueOf(108484), "xml-apis.jar from xalan-j_2_3_0, or xalan-j_2_3_1 from xml-commons-1.0.b2");
+    jarVersions.put(Long.valueOf(109049), "xml-apis.jar from xalan-j_2_4_0 from xml-commons RIVERCOURT1 branch");
+    jarVersions.put(Long.valueOf(113749), "xml-apis.jar from xalan-j_2_4_1 from factoryfinder-build of xml-commons RIVERCOURT1");
+    jarVersions.put(Long.valueOf(124704), "xml-apis.jar from tck-jaxp-1_2_0 branch of xml-commons");
+    jarVersions.put(Long.valueOf(124724), "xml-apis.jar from tck-jaxp-1_2_0 branch of xml-commons, tag: xml-commons-external_1_2_01");
+    jarVersions.put(Long.valueOf(194205), "xml-apis.jar from head branch of xml-commons, tag: xml-commons-external_1_3_02");
 
     // If the below were more common I would update it to report 
     //  errors better; but this is so old hardly anyone has it
-    jarVersions.put(new Long(424490), "xalan.jar from Xerces Tools releases - ERROR:DO NOT USE!");
+    jarVersions.put(Long.valueOf(424490), "xalan.jar from Xerces Tools releases - ERROR:DO NOT USE!");
 
-    jarVersions.put(new Long(1591855), "xerces.jar from xalan-j_1_1 from xerces-1...");
-    jarVersions.put(new Long(1498679), "xerces.jar from xalan-j_1_2 from xerces-1_2_0.bin");
-    jarVersions.put(new Long(1484896), "xerces.jar from xalan-j_1_2_1 from xerces-1_2_1.bin");
-    jarVersions.put(new Long(804460),  "xerces.jar from xalan-j_1_2_2 from xerces-1_2_2.bin");
-    jarVersions.put(new Long(1499244), "xerces.jar from xalan-j_2_0_0 from xerces-1_2_3.bin");
-    jarVersions.put(new Long(1605266), "xerces.jar from xalan-j_2_0_1 from xerces-1_3_0.bin");
-    jarVersions.put(new Long(904030), "xerces.jar from xalan-j_2_1_0 from xerces-1_4.bin");
-    jarVersions.put(new Long(904030), "xerces.jar from xerces-1_4_0.bin");
-    jarVersions.put(new Long(1802885), "xerces.jar from xerces-1_4_2.bin");
-    jarVersions.put(new Long(1734594), "xerces.jar from Xerces-J-bin.2.0.0.beta3");
-    jarVersions.put(new Long(1808883), "xerces.jar from xalan-j_2_2_D10,D11,D12 or xerces-1_4_3.bin");
-    jarVersions.put(new Long(1812019), "xerces.jar from xalan-j_2_2_0");
-    jarVersions.put(new Long(1720292), "xercesImpl.jar from xalan-j_2_3_D1");
-    jarVersions.put(new Long(1730053), "xercesImpl.jar from xalan-j_2_3_0 or xalan-j_2_3_1 from xerces-2_0_0");
-    jarVersions.put(new Long(1728861), "xercesImpl.jar from xalan-j_2_4_D1 from xerces-2_0_1");    
-    jarVersions.put(new Long(972027), "xercesImpl.jar from xalan-j_2_4_0 from xerces-2_1");
-    jarVersions.put(new Long(831587), "xercesImpl.jar from xalan-j_2_4_1 from xerces-2_2"); 
-    jarVersions.put(new Long(891817), "xercesImpl.jar from xalan-j_2_5_D1 from xerces-2_3");  
-    jarVersions.put(new Long(895924), "xercesImpl.jar from xerces-2_4");
-    jarVersions.put(new Long(1010806), "xercesImpl.jar from Xerces-J-bin.2.6.2"); 
-    jarVersions.put(new Long(1203860), "xercesImpl.jar from Xerces-J-bin.2.7.1");                           
+    jarVersions.put(Long.valueOf(1591855), "xerces.jar from xalan-j_1_1 from xerces-1...");
+    jarVersions.put(Long.valueOf(1498679), "xerces.jar from xalan-j_1_2 from xerces-1_2_0.bin");
+    jarVersions.put(Long.valueOf(1484896), "xerces.jar from xalan-j_1_2_1 from xerces-1_2_1.bin");
+    jarVersions.put(Long.valueOf(804460),  "xerces.jar from xalan-j_1_2_2 from xerces-1_2_2.bin");
+    jarVersions.put(Long.valueOf(1499244), "xerces.jar from xalan-j_2_0_0 from xerces-1_2_3.bin");
+    jarVersions.put(Long.valueOf(1605266), "xerces.jar from xalan-j_2_0_1 from xerces-1_3_0.bin");
+    jarVersions.put(Long.valueOf(904030), "xerces.jar from xalan-j_2_1_0 from xerces-1_4.bin");
+    jarVersions.put(Long.valueOf(904030), "xerces.jar from xerces-1_4_0.bin");
+    jarVersions.put(Long.valueOf(1802885), "xerces.jar from xerces-1_4_2.bin");
+    jarVersions.put(Long.valueOf(1734594), "xerces.jar from Xerces-J-bin.2.0.0.beta3");
+    jarVersions.put(Long.valueOf(1808883), "xerces.jar from xalan-j_2_2_D10,D11,D12 or xerces-1_4_3.bin");
+    jarVersions.put(Long.valueOf(1812019), "xerces.jar from xalan-j_2_2_0");
+    jarVersions.put(Long.valueOf(1720292), "xercesImpl.jar from xalan-j_2_3_D1");
+    jarVersions.put(Long.valueOf(1730053), "xercesImpl.jar from xalan-j_2_3_0 or xalan-j_2_3_1 from xerces-2_0_0");
+    jarVersions.put(Long.valueOf(1728861), "xercesImpl.jar from xalan-j_2_4_D1 from xerces-2_0_1");    
+    jarVersions.put(Long.valueOf(972027), "xercesImpl.jar from xalan-j_2_4_0 from xerces-2_1");
+    jarVersions.put(Long.valueOf(831587), "xercesImpl.jar from xalan-j_2_4_1 from xerces-2_2"); 
+    jarVersions.put(Long.valueOf(891817), "xercesImpl.jar from xalan-j_2_5_D1 from xerces-2_3");  
+    jarVersions.put(Long.valueOf(895924), "xercesImpl.jar from xerces-2_4");
+    jarVersions.put(Long.valueOf(1010806), "xercesImpl.jar from Xerces-J-bin.2.6.2"); 
+    jarVersions.put(Long.valueOf(1203860), "xercesImpl.jar from Xerces-J-bin.2.7.1");                           
 
-    jarVersions.put(new Long(37485), "xalanj1compat.jar from xalan-j_2_0_0");
-    jarVersions.put(new Long(38100), "xalanj1compat.jar from xalan-j_2_0_1");
+    jarVersions.put(Long.valueOf(37485), "xalanj1compat.jar from xalan-j_2_0_0");
+    jarVersions.put(Long.valueOf(38100), "xalanj1compat.jar from xalan-j_2_0_1");
 
-    jarVersions.put(new Long(18779), "xalanservlet.jar from xalan-j_2_0_0");
-    jarVersions.put(new Long(21453), "xalanservlet.jar from xalan-j_2_0_1");
-    jarVersions.put(new Long(24826), "xalanservlet.jar from xalan-j_2_3_1 or xalan-j_2_4_1");    
-    jarVersions.put(new Long(24831), "xalanservlet.jar from xalan-j_2_4_1");
+    jarVersions.put(Long.valueOf(18779), "xalanservlet.jar from xalan-j_2_0_0");
+    jarVersions.put(Long.valueOf(21453), "xalanservlet.jar from xalan-j_2_0_1");
+    jarVersions.put(Long.valueOf(24826), "xalanservlet.jar from xalan-j_2_3_1 or xalan-j_2_4_1");    
+    jarVersions.put(Long.valueOf(24831), "xalanservlet.jar from xalan-j_2_4_1");
     // Stop recording xalanservlet.jar sizes as of Xalan Java 2.5.0; now a .war file
     
     // For those who've downloaded JAXP from sun
-    jarVersions.put(new Long(5618), "jaxp.jar from jaxp1.0.1");
-    jarVersions.put(new Long(136133), "parser.jar from jaxp1.0.1");
-    jarVersions.put(new Long(28404), "jaxp.jar from jaxp-1.1");
-    jarVersions.put(new Long(187162), "crimson.jar from jaxp-1.1");
-    jarVersions.put(new Long(801714), "xalan.jar from jaxp-1.1");
-    jarVersions.put(new Long(196399), "crimson.jar from crimson-1.1.1");
-    jarVersions.put(new Long(33323), "jaxp.jar from crimson-1.1.1 or jakarta-ant-1.4.1b1");
-    jarVersions.put(new Long(152717), "crimson.jar from crimson-1.1.2beta2");
-    jarVersions.put(new Long(88143), "xml-apis.jar from crimson-1.1.2beta2");
-    jarVersions.put(new Long(206384), "crimson.jar from crimson-1.1.3 or jakarta-ant-1.4.1b1");
+    jarVersions.put(Long.valueOf(5618), "jaxp.jar from jaxp1.0.1");
+    jarVersions.put(Long.valueOf(136133), "parser.jar from jaxp1.0.1");
+    jarVersions.put(Long.valueOf(28404), "jaxp.jar from jaxp-1.1");
+    jarVersions.put(Long.valueOf(187162), "crimson.jar from jaxp-1.1");
+    jarVersions.put(Long.valueOf(801714), "xalan.jar from jaxp-1.1");
+    jarVersions.put(Long.valueOf(196399), "crimson.jar from crimson-1.1.1");
+    jarVersions.put(Long.valueOf(33323), "jaxp.jar from crimson-1.1.1 or jakarta-ant-1.4.1b1");
+    jarVersions.put(Long.valueOf(152717), "crimson.jar from crimson-1.1.2beta2");
+    jarVersions.put(Long.valueOf(88143), "xml-apis.jar from crimson-1.1.2beta2");
+    jarVersions.put(Long.valueOf(206384), "crimson.jar from crimson-1.1.3 or jakarta-ant-1.4.1b1");
 
     // jakarta-ant: since many people use ant these days
-    jarVersions.put(new Long(136198), "parser.jar from jakarta-ant-1.3 or 1.2");
-    jarVersions.put(new Long(5537), "jaxp.jar from jakarta-ant-1.3 or 1.2");
+    jarVersions.put(Long.valueOf(136198), "parser.jar from jakarta-ant-1.3 or 1.2");
+    jarVersions.put(Long.valueOf(5537), "jaxp.jar from jakarta-ant-1.3 or 1.2");
   }
 
   /** Simple PrintWriter we send output to; defaults to System.out.  */
