@@ -149,12 +149,12 @@ public class GetOpt{
 	    String arg = theCurrentOption.getArgument();
 	    if (!theOptionMatcher.match(c)) {
                 ErrorMsg msg = new ErrorMsg(ErrorMsg.ILLEGAL_CMDLINE_OPTION_ERR,
-                                            new Character(c));
+                                            Character.valueOf(c));
 		throw (new IllegalArgumentException(msg.toString()));
 	    }
 	    else if (shouldHaveArg && (arg == null)) {
                 ErrorMsg msg = new ErrorMsg(ErrorMsg.CMDLINE_OPT_MISSING_ARG_ERR,
-                                            new Character(c));
+                                            Character.valueOf(c));
 		throw (new MissingOptArgException(msg.toString()));
 	    }
 	    retval = c;
